fixed the dark mode in about section . changed the font size and styling.

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -2,8 +2,8 @@
   width: 100%;
   text-align: center;
   padding: 80px;
-  background-color: #f1e7e7;
-  border: 1px solid black;
+  border: 2px solid #777;
+  border-radius: 50px;
 }
 
 .about-section img {
@@ -18,6 +18,20 @@
   text-align: left;
 }
 
+/* .aboutTextWise {
+    font-size: 16px;
+    line-height: 1.5;
+  margin-bottom: 20px;
+}
+
+.aboutTextWise ol {
+  padding-left: 20px;
+  margin-bottom: 10px;
+}
+
+.aboutTextWise li {
+  margin-bottom: 10px;
+} */
 
 .about-section h1 {
   font-size: 24px;
@@ -39,10 +53,11 @@
   background-color: #eaeaea;
 }
 
-
 .about-section p {
-  font-family: "Times New Roman", Times, serif;
-  text-shadow: #ec0c0c;
-  font-size: 20px;
-  color: #1b1a1a;
+  font-family: "Arial", sans-serif;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.6;
+  color: #333; /* Dark gray text color */
+  margin-bottom: 20px;
 }
